updated list_all_vars and parse_varlist to be consistent across crspm and compa

--- a/nbs/01_wrds/01_crspm.ipynb
+++ b/nbs/01_wrds/01_crspm.ipynb
@@ -78,13 +78,13 @@
     "\n",
     "    try:\n",
     "        db = wrds_api.Connection()\n",
-    "        msf = db.describe_table(LIBRARY,TABLE).assign(table=TABLE)\n",
-    "        mse = db.describe_table(LIBRARY,NAMES_TABLE).assign(table=NAMES_TABLE)\n",
-    "        dlst = db.describe_table(LIBRARY,DELIST_TABLE).assign(table=DELIST_TABLE)\n",
+    "        msf = db.describe_table(LIBRARY,TABLE).assign(wrds_library=LIBRARY, wrds_table=TABLE)\n",
+    "        mse = db.describe_table(LIBRARY,NAMES_TABLE).assign(wrds_library=LIBRARY, wrds_table=NAMES_TABLE)\n",
+    "        dlst = db.describe_table(LIBRARY,DELIST_TABLE).assign(wrds_library=LIBRARY, wrds_table=DELIST_TABLE)\n",
     "    finally:\n",
     "        db.close()\n",
     "\n",
-    "    return pd.concat([msf, mse, dlst])[['name','table', 'type']].copy() #.drop_duplicates(keep='first')"
+    "    return pd.concat([msf, mse, dlst])[['name','type','wrds_library','wrds_table']].copy()"
    ]
   },
   {
@@ -145,52 +145,58 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>name</th>\n",
-       "      <th>table</th>\n",
        "      <th>type</th>\n",
+       "      <th>wrds_library</th>\n",
+       "      <th>wrds_table</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>cusip</td>\n",
-       "      <td>msf</td>\n",
        "      <td>VARCHAR(8)</td>\n",
+       "      <td>crsp</td>\n",
+       "      <td>msf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>permno</td>\n",
-       "      <td>msf</td>\n",
        "      <td>DOUBLE_PRECISION</td>\n",
+       "      <td>crsp</td>\n",
+       "      <td>msf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>permco</td>\n",
-       "      <td>msf</td>\n",
        "      <td>DOUBLE_PRECISION</td>\n",
+       "      <td>crsp</td>\n",
+       "      <td>msf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>issuno</td>\n",
-       "      <td>msf</td>\n",
        "      <td>DOUBLE_PRECISION</td>\n",
+       "      <td>crsp</td>\n",
+       "      <td>msf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>hexcd</td>\n",
-       "      <td>msf</td>\n",
        "      <td>DOUBLE_PRECISION</td>\n",
+       "      <td>crsp</td>\n",
+       "      <td>msf</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     name table              type\n",
-       "0   cusip   msf        VARCHAR(8)\n",
-       "1  permno   msf  DOUBLE_PRECISION\n",
-       "2  permco   msf  DOUBLE_PRECISION\n",
-       "3  issuno   msf  DOUBLE_PRECISION\n",
-       "4   hexcd   msf  DOUBLE_PRECISION"
+       "     name              type wrds_library wrds_table\n",
+       "0   cusip        VARCHAR(8)         crsp        msf\n",
+       "1  permno  DOUBLE_PRECISION         crsp        msf\n",
+       "2  permco  DOUBLE_PRECISION         crsp        msf\n",
+       "3  issuno  DOUBLE_PRECISION         crsp        msf\n",
+       "4   hexcd  DOUBLE_PRECISION         crsp        msf"
       ]
      },
      "execution_count": null,
@@ -244,14 +250,14 @@
    "source": [
     "#| export\n",
     "def parse_varlist(vars: List[str]=None,\n",
-    "                  required_vars = ['permno','permco','date','ret','exchcd','dlret','dlstcd','dlstdt'],\n",
+    "                  required_vars = [],\n",
     "                  ) -> str:\n",
     "    \"\"\"Figures out which `vars` come from the `{LIBRARY}.{TABLE}` table and which come from the `{LIBRARY}.{NAMES_TABLE}` table and adds a. and b. prefixes to variable names to feed into an SQL query\"\"\"\n",
     "\n",
     "    # Get all available variables and add suffixes needed for the SQL query\n",
     "    suffix_mapping = {TABLE: 'a.', NAMES_TABLE: 'b.', DELIST_TABLE: 'c.'}\n",
     "    all_avail_vars = list_all_vars().drop_duplicates(subset='name',keep='first').copy()\n",
-    "    all_avail_vars['w_prefix'] = all_avail_vars.apply(lambda row: suffix_mapping[row['table']] + row['name'] , axis=1)\n",
+    "    all_avail_vars['w_prefix'] = all_avail_vars.apply(lambda row: suffix_mapping[row['wrds_table']] + row['name'] , axis=1)\n",
     "\n",
     "    if vars == '*': return ','.join(list(all_avail_vars['w_prefix']))\n",
     "    \n",
@@ -278,7 +284,7 @@
     {
      "data": {
       "text/plain": [
-       "'a.permno,a.permco,a.date,a.ret,b.exchcd,c.dlret,c.dlstcd,c.dlstdt,b.siccd'"
+       "'a.ret,b.siccd,c.dlret'"
       ]
      },
      "execution_count": null,
@@ -321,13 +327,14 @@
     "#| export\n",
     "def get_raw_data(\n",
     "        vars: List[str]=None, # If None, downloads `default_raw_vars`; use '*' to get all available variables\n",
+    "        required_vars = ['permno','date'], # Variables that are always downloaded, regardless `vars` argument\n",
     "        nrows: int=None,  #Number of rows to download. If None, full dataset will be downloaded             \n",
     "        start_date: str=None,          # Start date in MM/DD/YYYY format\n",
     "        end_date: str=None,            # End date in MM/DD/YYYY format  \n",
     ") -> pd.DataFrame:\n",
     "    \"Downloads `vars` from `start_date` to `end_date` from WRDS {LIBRARY}.{TABLE}, {LIBRARY}.{NAMES_TABLE} and {LIBRARY}.{DELIST_TABLE}.\" \n",
     "\n",
-    "    varlist_string = parse_varlist(vars)\n",
+    "    varlist_string = parse_varlist(vars, required_vars=required_vars)\n",
     "    sql_string = f\"\"\"SELECT {varlist_string}\n",
     "                        FROM {LIBRARY}.{TABLE} AS a \n",
     "                        LEFT JOIN {LIBRARY}.{NAMES_TABLE} AS b\n",
@@ -476,13 +483,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>permno</th>\n",
-       "      <th>permco</th>\n",
        "      <th>date</th>\n",
-       "      <th>ret</th>\n",
-       "      <th>exchcd</th>\n",
-       "      <th>dlret</th>\n",
-       "      <th>dlstcd</th>\n",
-       "      <th>dlstdt</th>\n",
        "      <th>shrout</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -493,7 +494,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [permno, permco, date, ret, exchcd, dlret, dlstcd, dlstdt, shrout]\n",
+       "Columns: [permno, date, shrout]\n",
        "Index: []"
       ]
      },
@@ -564,23 +565,11 @@
        "      <th></th>\n",
        "      <th>date</th>\n",
        "      <th>dtdate</th>\n",
-       "      <th>permco</th>\n",
-       "      <th>ret</th>\n",
-       "      <th>exchcd</th>\n",
-       "      <th>dlret</th>\n",
-       "      <th>dlstcd</th>\n",
-       "      <th>dlstdt</th>\n",
        "      <th>shrout</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>permno</th>\n",
        "      <th>Mdate</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -593,7 +582,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [date, dtdate, permco, ret, exchcd, dlret, dlstcd, dlstdt, shrout]\n",
+       "Columns: [date, dtdate, shrout]\n",
        "Index: []"
       ]
      },
@@ -615,8 +604,8 @@
    "source": [
     "#| export\n",
     "def delist_adj_ret(\n",
-    "        df: pd.DataFrame, # Requires `ret`,`exchcd`, `dlret`, and `dlstcd` variables\n",
-    "        adj_ret_var: str='ret_adj'\n",
+    "        df: pd.DataFrame, # Requires `ret`,`exchcd`,`dlret`,`dlstcd`, and `dlstdt` variables\n",
+    "        adj_ret_var: str='ret_adj' # Name of the adjusted return variable created by this function\n",
     ") -> pd.DataFrame:\n",
     "    \"\"\"Adjusts for returns for delisting using Shumway and Warther (1999) and Johnson and Zhao (2007)\"\"\"\n",
     "\n",
@@ -661,20 +650,16 @@
        "      <th></th>\n",
        "      <th>date</th>\n",
        "      <th>dtdate</th>\n",
-       "      <th>permco</th>\n",
+       "      <th>dlstcd</th>\n",
+       "      <th>dlstdt</th>\n",
        "      <th>ret</th>\n",
        "      <th>exchcd</th>\n",
        "      <th>dlret</th>\n",
-       "      <th>dlstcd</th>\n",
-       "      <th>dlstdt</th>\n",
-       "      <th>shrout</th>\n",
        "      <th>ret_adj</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>permno</th>\n",
        "      <th>Mdate</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -692,7 +677,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [date, dtdate, permco, ret, exchcd, dlret, dlstcd, dlstdt, shrout, ret_adj]\n",
+       "Columns: [date, dtdate, dlstcd, dlstdt, ret, exchcd, dlret, ret_adj]\n",
        "Index: []"
       ]
      },
@@ -703,7 +688,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "dl = delist_adj_ret(df)\n",
+    "dl = delist_adj_ret(process_raw_data(get_raw_data(['dlret','dlstcd','dlstdt','exchcd','ret'], nrows=10)))   \n",
     "dl.head(0)"
    ]
   },
@@ -735,7 +720,7 @@
    "outputs": [],
    "source": [
     "#| eval: false\n",
-    "ftr = features(df)"
+    "ftr = features(dl)"
    ]
   },
   {
