--- a/nbs/01_wrds/03_compa_ccm.ipynb
+++ b/nbs/01_wrds/03_compa_ccm.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# compa\n",
+    "# compa_ccm\n",
     "\n",
     "> Retrieve and process data from WRDS CRSP/Compustat Merged (CCM) Fundamentals Annual"
    ]
@@ -49,6 +49,7 @@
     "TABLE = 'funda'\n",
     "LINK_LIBRARY = 'crsp'\n",
     "LINK_TABLE = 'ccmxpf_lnkhist'\n",
+    "COMPANY_TABLE = 'company'\n",
     "FREQ = 'A'\n",
     "MIN_YEAR = 1950\n",
     "MAX_YEAR = None\n",
@@ -66,15 +67,16 @@
    "source": [
     "#| export\n",
     "def list_all_vars() -> pd.DataFrame:\n",
-    "    \"Collects names of all available variables from WRDS f`{LIBRARY}.{TABLE}`\"\n",
+    "    \"Collects names of all available variables from WRDS f`{LIBRARY}.{TABLE}` and `{LIBRARY}.{COMPANY_TABLE}`.\"\n",
     "\n",
     "    try:\n",
     "        db = wrds_api.Connection()\n",
     "        funda = db.describe_table(LIBRARY,TABLE).assign(wrds_library=LIBRARY, wrds_table=TABLE)\n",
+    "        fundn = db.describe_table(LIBRARY,COMPANY_TABLE).assign(wrds_library=LIBRARY, wrds_table=COMPANY_TABLE)\n",
     "    finally:\n",
     "        db.close()\n",
     "\n",
-    "    return funda[['name','type','wrds_library','wrds_table']]"
+    "    return pd.concat([funda,fundn])[['name','type','wrds_library','wrds_table']].copy()"
    ]
   },
   {
@@ -95,7 +97,7 @@
     {
      "data": {
       "text/plain": [
-       "948"
+       "987"
       ]
      },
      "execution_count": null,
@@ -118,13 +120,14 @@
     "def default_raw_vars():\n",
     "    \"\"\"Defines default variables used in `get_raw_data` if none are specified.\"\"\"\n",
     "\n",
-    "    return ['datadate', 'gvkey', 'cusip' ,'cik' ,'tic' ,'fyear' ,'fyr' ,'naicsh', 'sich' ,'exchg',  \n",
+    "    return ['datadate', 'gvkey', 'cusip' ,'cik' ,'tic' ,'fyear' ,'fyr' , 'fic',\n",
+    "            'naicsh', 'sich' , 'sic', 'naics', 'exchg',  \n",
     "            'lt' ,'at' ,'txditc' ,'pstkl' ,'pstkrv' ,'pstk' ,'csho' ,'ajex' , 'rdip',\n",
     "            'act' ,'dvc' ,'xad','seq' ,'che' ,'lct' ,'dlc' ,'ib' ,'dvp' ,'txdi' ,'dp' ,\n",
     "            'txp' ,'oancf' ,'ivncf' ,'fincf' ,'dltt' ,'mib','ceq' ,'invt' ,'cogs' , 'revt',\n",
     "            'sale' ,'capx' ,'xrd' ,'txdb' ,'prcc_f' ,'sstk' ,'prstkc' ,'dltis' ,'dltr' ,'emp' ,\n",
     "            'dd1' ,'ppegt' ,'ppent' ,'xint' ,'txt' ,'sppe' ,'gdwl' ,'xrent' ,'re' ,'dvpsx_f' ,\n",
-    "            'tstk' ,'wcap' ,'rect' ,'xsga' ,'aqc' ,'oibdp' ,'dpact' ,'fic' ,'ni' ,'ivao' ,'ivst' ,\n",
+    "            'tstk' ,'wcap' ,'rect' ,'xsga' ,'aqc' ,'oibdp' ,'dpact','ni' ,'ivao' ,'ivst' ,\n",
     "            'dv' , 'intan' ,'pi' ,'txfo' ,'pifo' ,'xpp' ,'drc' ,'drlt' ,'ap' ,'xacc' ,'itcb']             "
    ]
   },
@@ -137,7 +140,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['datadate', 'gvkey', 'cusip', 'cik', 'tic', 'fyear', 'fyr', 'naicsh', 'sich', 'exchg', 'lt', 'at', 'txditc', 'pstkl', 'pstkrv', 'pstk', 'csho', 'ajex', 'rdip', 'act', 'dvc', 'xad', 'seq', 'che', 'lct', 'dlc', 'ib', 'dvp', 'txdi', 'dp', 'txp', 'oancf', 'ivncf', 'fincf', 'dltt', 'mib', 'ceq', 'invt', 'cogs', 'revt', 'sale', 'capx', 'xrd', 'txdb', 'prcc_f', 'sstk', 'prstkc', 'dltis', 'dltr', 'emp', 'dd1', 'ppegt', 'ppent', 'xint', 'txt', 'sppe', 'gdwl', 'xrent', 're', 'dvpsx_f', 'tstk', 'wcap', 'rect', 'xsga', 'aqc', 'oibdp', 'dpact', 'fic', 'ni', 'ivao', 'ivst', 'dv', 'intan', 'pi', 'txfo', 'pifo', 'xpp', 'drc', 'drlt', 'ap', 'xacc', 'itcb']\n"
+      "['datadate', 'gvkey', 'cusip', 'cik', 'tic', 'fyear', 'fyr', 'fic', 'naicsh', 'sich', 'sic', 'naics', 'exchg', 'lt', 'at', 'txditc', 'pstkl', 'pstkrv', 'pstk', 'csho', 'ajex', 'rdip', 'act', 'dvc', 'xad', 'seq', 'che', 'lct', 'dlc', 'ib', 'dvp', 'txdi', 'dp', 'txp', 'oancf', 'ivncf', 'fincf', 'dltt', 'mib', 'ceq', 'invt', 'cogs', 'revt', 'sale', 'capx', 'xrd', 'txdb', 'prcc_f', 'sstk', 'prstkc', 'dltis', 'dltr', 'emp', 'dd1', 'ppegt', 'ppent', 'xint', 'txt', 'sppe', 'gdwl', 'xrent', 're', 'dvpsx_f', 'tstk', 'wcap', 'rect', 'xsga', 'aqc', 'oibdp', 'dpact', 'ni', 'ivao', 'ivst', 'dv', 'intan', 'pi', 'txfo', 'pifo', 'xpp', 'drc', 'drlt', 'ap', 'xacc', 'itcb']\n"
      ]
     }
    ],
@@ -152,25 +155,31 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def parse_varlist(vars: List[str]|str=None, #list of variables requested by user\n",
-    "                  req_vars: List[str] = ['gvkey', 'iid', 'datadate'], #list of variables that will get downloaded, even if not in `vars`\n",
-    "                  prefix: str='a.', #string to add in front of each variable name when we build the SQL string of variable names\n",
+    "def parse_varlist(vars: List[str]=None,\n",
+    "                  required_vars = [],\n",
     "                  ) -> str:\n",
-    "    \"\"\"Adds required variables to requested variables, validates them, and builds the SQL string with their names\"\"\"\n",
+    "    \"\"\"Figures out which `vars` come from the `{LIBRARY}.{TABLE}` table and which come from the `{LIBRARY}.{COMPANY_TABLE}` table and adds a. and b. prefixes to variable names to feed into an SQL query\"\"\"\n",
     "\n",
-    "    if vars=='*': return f'{prefix}*' \n",
+    "    # Get all available variables and add suffixes needed for the SQL query\n",
+    "    suffix_mapping = {TABLE: 'a.', COMPANY_TABLE: 'b.'}\n",
+    "    all_avail_vars = list_all_vars().drop_duplicates(subset='name',keep='first').copy()\n",
+    "    all_avail_vars['w_prefix'] = all_avail_vars.apply(lambda row: suffix_mapping[row['wrds_table']] + row['name'] , axis=1)\n",
     "\n",
-    "    # Build full list of variables that will be downloaded\n",
+    "    if vars == '*': return ','.join(list(all_avail_vars['w_prefix']))\n",
+    "    \n",
+    "    # Add required vars to requested vars\n",
     "    if vars is None: vars = default_raw_vars()\n",
-    "    if req_vars is None: req_vars = []\n",
-    "    vars =  req_vars + [x for x in vars if x not in req_vars] #in case `vars` already contains some of the required variables\n",
+    "    vars_to_get =  required_vars + [x for x in list(set(vars)) if x not in required_vars]\n",
     "\n",
     "    # Validate variables to be downloaded (make sure that they are in the target database)\n",
-    "    valid_vars = list(list_all_vars().name)\n",
-    "    invalid_vars = [v for v in vars if v not in valid_vars]\n",
+    "    invalid_vars = [v for v in vars_to_get if v not in list(all_avail_vars.name)]\n",
     "    if invalid_vars: raise ValueError(f\"These vars are not in the database: {invalid_vars}\") \n",
     "\n",
-    "    return ','.join([f'{prefix}{var_name}' for var_name in vars])"
+    "    # Extract information on which variable comes from which wrds table, so we know what prefix to use\n",
+    "    vars_to_get = pd.DataFrame(vars_to_get, columns=['name'])\n",
+    "    get_these = vars_to_get.merge(all_avail_vars, how = 'left', on = 'name')\n",
+    "        \n",
+    "    return ','.join(list(get_these['w_prefix']))"
    ]
   },
   {
@@ -181,7 +190,7 @@
     {
      "data": {
       "text/plain": [
-       "'a.gvkey,a.iid,a.datadate,a.at,a.lt'"
+       "'a.at,a.lt'"
       ]
      },
      "execution_count": null,
@@ -203,19 +212,21 @@
     "#| export\n",
     "def get_raw_data(\n",
     "        vars: List[str]=None, # If None, downloads `default_raw_vars`; use '*' to get all available variables\n",
+    "        required_vars: List[str]=['gvkey','datadate'], #list of variables that will get downloaded, even if not in `vars`\n",
     "        nrows: int=None, #Number of rows to download. If None, full dataset will be downloaded\n",
     "        start_date: str=None, # Start date in MM/DD/YYYY format\n",
     "        end_date: str=None #End date in MM/DD/YYYY format\n",
     ") -> pd.DataFrame:\n",
     "    \"\"\"Downloads `vars` from `start_date` to `end_date` from WRDS `{LIBRARY}.{TABLE}` library and adds PERMNO and PERMCO as in CCM\"\"\"\n",
     " \n",
-    "    vars = parse_varlist(vars, prefix='a.')\n",
+    "    vars = parse_varlist(vars, required_vars=required_vars)\n",
     "\n",
-    "    sql_string=f\"\"\"SELECT b.lpermno as permno, b.lpermco as permco, b.liid, b.linkprim as linkprim, {vars}\n",
+    "    sql_string=f\"\"\"SELECT c.lpermno as permno, c.lpermco as permco, c.liid, c.linkprim as linkprim, {vars}\n",
     "                    FROM {LIBRARY}.{TABLE} AS a\n",
-    "                    INNER JOIN {LINK_LIBRARY}.{LINK_TABLE} AS b ON a.gvkey = b.gvkey \n",
-    "                    WHERE datadate BETWEEN b.linkdt AND COALESCE(b.linkenddt, CURRENT_DATE)\n",
-    "                            AND b.linktype IN ('LU','LC') \n",
+    "                    LEFT JOIN {LIBRARY}.{COMPANY_TABLE} AS b ON a.gvkey = b.gvkey \n",
+    "                    INNER JOIN {LINK_LIBRARY}.{LINK_TABLE} AS c ON a.gvkey = c.gvkey \n",
+    "                    WHERE datadate BETWEEN c.linkdt AND COALESCE(c.linkenddt, CURRENT_DATE)\n",
+    "                            AND c.linktype IN ('LU','LC') \n",
     "                            AND indfmt='INDL' AND datafmt='STD' AND popsrc='D' AND consol='C'\n",
     "                \"\"\"\n",
     "    if start_date is not None: sql_string += r\" AND datadate >= %(start_date)s\"\n",
@@ -230,7 +241,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `get_raw_data` function will produce identical results to the ones we would obtain if we used the WRDS website (with the default options unchanged). \n",
+    "The `get_raw_data` function will produce identical results to the ones we would obtain if we used the WRDS [website](https://wrds-www.wharton.upenn.edu/pages/get-data/center-research-security-prices-crsp/annual-update/crspcompustat-merged/fundamentals-annual/) (with the default options unchanged). \n",
     "\n",
     "It results in no `permno-datadate` duplicates, but there is a small number of `gvkey-datadate` duplicates (about 1% of the data) because each `permno` maps to a unique `gvkey+iid` value and some gvkeys have multiple share classes (different iid's). \n",
     "\n",
@@ -274,16 +285,16 @@
        "      <th>consol</th>\n",
        "      <th>popsrc</th>\n",
        "      <th>...</th>\n",
-       "      <th>prcc_f</th>\n",
-       "      <th>prch_f</th>\n",
-       "      <th>prcl_f</th>\n",
-       "      <th>adjex_f</th>\n",
-       "      <th>rank</th>\n",
-       "      <th>au</th>\n",
-       "      <th>auop</th>\n",
-       "      <th>auopic</th>\n",
-       "      <th>ceoso</th>\n",
-       "      <th>cfoso</th>\n",
+       "      <th>priusa</th>\n",
+       "      <th>sic</th>\n",
+       "      <th>spcindcd</th>\n",
+       "      <th>spcseccd</th>\n",
+       "      <th>spcsrc</th>\n",
+       "      <th>state</th>\n",
+       "      <th>stko</th>\n",
+       "      <th>weburl</th>\n",
+       "      <th>dldte</th>\n",
+       "      <th>ipodate</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -300,33 +311,33 @@
        "      <td>C</td>\n",
        "      <td>D</td>\n",
        "      <td>...</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10.875</td>\n",
-       "      <td>7.5</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>01</td>\n",
+       "      <td>3089</td>\n",
+       "      <td>325.0</td>\n",
+       "      <td>978.0</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>1978-06-30</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 952 columns</p>\n",
+       "<p>1 rows × 986 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "    permno   permco liid linkprim   gvkey    datadate   fyear indfmt consol  \\\n",
        "0  25881.0  23369.0   01        P  001000  1970-12-31  1970.0   INDL      C   \n",
        "\n",
-       "  popsrc  ... prcc_f  prch_f prcl_f adjex_f  rank    au  auop auopic  ceoso  \\\n",
-       "0      D  ...   10.0  10.875    7.5     1.0  None  None  None   None   None   \n",
+       "  popsrc  ... priusa   sic spcindcd spcseccd spcsrc state stko weburl  \\\n",
+       "0      D  ...     01  3089    325.0    978.0   None  None  0.0   None   \n",
        "\n",
-       "   cfoso  \n",
-       "0   None  \n",
+       "        dldte  ipodate  \n",
+       "0  1978-06-30     None  \n",
        "\n",
-       "[1 rows x 952 columns]"
+       "[1 rows x 986 columns]"
       ]
      },
      "execution_count": null,
@@ -381,7 +392,6 @@
        "      <th>liid</th>\n",
        "      <th>linkprim</th>\n",
        "      <th>gvkey</th>\n",
-       "      <th>iid</th>\n",
        "      <th>datadate</th>\n",
        "      <th>at</th>\n",
        "      <th>lt</th>\n",
@@ -394,7 +404,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [permno, permco, liid, linkprim, gvkey, iid, datadate, at, lt]\n",
+       "Columns: [permno, permco, liid, linkprim, gvkey, datadate, at, lt]\n",
        "Index: []"
       ]
      },
@@ -449,36 +459,36 @@
        "      <th>liid</th>\n",
        "      <th>linkprim</th>\n",
        "      <th>gvkey</th>\n",
-       "      <th>iid</th>\n",
        "      <th>datadate</th>\n",
-       "      <th>cusip</th>\n",
-       "      <th>cik</th>\n",
+       "      <th>txdb</th>\n",
+       "      <th>wcap</th>\n",
        "      <th>tic</th>\n",
+       "      <th>revt</th>\n",
        "      <th>...</th>\n",
-       "      <th>intan</th>\n",
-       "      <th>pi</th>\n",
-       "      <th>txfo</th>\n",
-       "      <th>pifo</th>\n",
-       "      <th>xpp</th>\n",
-       "      <th>drc</th>\n",
-       "      <th>drlt</th>\n",
-       "      <th>ap</th>\n",
-       "      <th>xacc</th>\n",
-       "      <th>itcb</th>\n",
+       "      <th>fincf</th>\n",
+       "      <th>ppegt</th>\n",
+       "      <th>emp</th>\n",
+       "      <th>txt</th>\n",
+       "      <th>gdwl</th>\n",
+       "      <th>re</th>\n",
+       "      <th>oibdp</th>\n",
+       "      <th>dpact</th>\n",
+       "      <th>dv</th>\n",
+       "      <th>ivao</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>0 rows × 87 columns</p>\n",
+       "<p>0 rows × 88 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [permno, permco, liid, linkprim, gvkey, iid, datadate, cusip, cik, tic, fyear, fyr, naicsh, sich, exchg, lt, at, txditc, pstkl, pstkrv, pstk, csho, ajex, rdip, act, dvc, xad, seq, che, lct, dlc, ib, dvp, txdi, dp, txp, oancf, ivncf, fincf, dltt, mib, ceq, invt, cogs, revt, sale, capx, xrd, txdb, prcc_f, sstk, prstkc, dltis, dltr, emp, dd1, ppegt, ppent, xint, txt, sppe, gdwl, xrent, re, dvpsx_f, tstk, wcap, rect, xsga, aqc, oibdp, dpact, fic, ni, ivao, ivst, dv, intan, pi, txfo, pifo, xpp, drc, drlt, ap, xacc, itcb]\n",
+       "Columns: [permno, permco, liid, linkprim, gvkey, datadate, txdb, wcap, tic, revt, csho, pifo, ivncf, sic, drlt, prcc_f, xrd, sich, dlc, itcb, seq, cogs, xad, dltr, sale, prstkc, xrent, fyr, fic, pstkl, lct, pstk, ap, act, che, sstk, txp, mib, xacc, dvc, dvpsx_f, txdi, drc, intan, ajex, lt, ib, pi, tstk, txditc, txfo, xsga, rect, fyear, ceq, naicsh, naics, capx, rdip, dltt, cusip, xint, dltis, ppent, oancf, exchg, dvp, xpp, cik, dp, aqc, ni, pstkrv, dd1, ivst, at, sppe, invt, fincf, ppegt, emp, txt, gdwl, re, oibdp, dpact, dv, ivao]\n",
        "Index: []\n",
        "\n",
-       "[0 rows x 87 columns]"
+       "[0 rows x 88 columns]"
       ]
      },
      "execution_count": null,
@@ -554,21 +564,21 @@
        "      <th>liid</th>\n",
        "      <th>linkprim</th>\n",
        "      <th>gvkey</th>\n",
-       "      <th>iid</th>\n",
-       "      <th>cusip</th>\n",
-       "      <th>cik</th>\n",
+       "      <th>txdb</th>\n",
+       "      <th>wcap</th>\n",
        "      <th>tic</th>\n",
+       "      <th>revt</th>\n",
        "      <th>...</th>\n",
-       "      <th>intan</th>\n",
-       "      <th>pi</th>\n",
-       "      <th>txfo</th>\n",
-       "      <th>pifo</th>\n",
-       "      <th>xpp</th>\n",
-       "      <th>drc</th>\n",
-       "      <th>drlt</th>\n",
-       "      <th>ap</th>\n",
-       "      <th>xacc</th>\n",
-       "      <th>itcb</th>\n",
+       "      <th>fincf</th>\n",
+       "      <th>ppegt</th>\n",
+       "      <th>emp</th>\n",
+       "      <th>txt</th>\n",
+       "      <th>gdwl</th>\n",
+       "      <th>re</th>\n",
+       "      <th>oibdp</th>\n",
+       "      <th>dpact</th>\n",
+       "      <th>dv</th>\n",
+       "      <th>ivao</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>permno</th>\n",
@@ -599,15 +609,15 @@
        "  <tbody>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>0 rows × 87 columns</p>\n",
+       "<p>0 rows × 88 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [datadate, dtdate, permco, liid, linkprim, gvkey, iid, cusip, cik, tic, fyear, fyr, naicsh, sich, exchg, lt, at, txditc, pstkl, pstkrv, pstk, csho, ajex, rdip, act, dvc, xad, seq, che, lct, dlc, ib, dvp, txdi, dp, txp, oancf, ivncf, fincf, dltt, mib, ceq, invt, cogs, revt, sale, capx, xrd, txdb, prcc_f, sstk, prstkc, dltis, dltr, emp, dd1, ppegt, ppent, xint, txt, sppe, gdwl, xrent, re, dvpsx_f, tstk, wcap, rect, xsga, aqc, oibdp, dpact, fic, ni, ivao, ivst, dv, intan, pi, txfo, pifo, xpp, drc, drlt, ap, xacc, itcb]\n",
+       "Columns: [datadate, dtdate, permco, liid, linkprim, gvkey, txdb, wcap, tic, revt, csho, pifo, ivncf, sic, drlt, prcc_f, xrd, sich, dlc, itcb, seq, cogs, xad, dltr, sale, prstkc, xrent, fyr, fic, pstkl, lct, pstk, ap, act, che, sstk, txp, mib, xacc, dvc, dvpsx_f, txdi, drc, intan, ajex, lt, ib, pi, tstk, txditc, txfo, xsga, rect, fyear, ceq, naicsh, naics, capx, rdip, dltt, cusip, xint, dltis, ppent, oancf, exchg, dvp, xpp, cik, dp, aqc, ni, pstkrv, dd1, ivst, at, sppe, invt, fincf, ppegt, emp, txt, gdwl, re, oibdp, dpact, dv, ivao]\n",
        "Index: []\n",
        "\n",
-       "[0 rows x 87 columns]"
+       "[0 rows x 88 columns]"
       ]
      },
      "execution_count": null,
