updated list_all_vars and parse_varlist to be consistent across ibest_ltg and ratios as well

--- a/nbs/01_wrds/03_compa.ipynb
+++ b/nbs/01_wrds/03_compa.ipynb
@@ -351,6 +351,7 @@
     }
    ],
    "source": [
+    "#| eval: false\n",
     "m = get_raw_data(['at','indfmt','sich','sic'],nrows=1)\n",
     "m"
    ]
