--- a/nbs/01_wrds/03_compa_ccm.ipynb
+++ b/nbs/01_wrds/03_compa_ccm.ipynb
@@ -49,7 +49,7 @@
     "TABLE = 'funda'\n",
     "LINK_LIBRARY = 'crsp'\n",
     "LINK_TABLE = 'ccmxpf_lnkhist'\n",
-    "COMPANY_TABLE = 'company'\n",
+    "COMPANY_TABLE = 'company' #contains some header information that is missing from comp.funda (e.g. sic and naics) \n",
     "FREQ = 'A'\n",
     "MIN_YEAR = 1950\n",
     "MAX_YEAR = None\n",
