--- a/nbs/01_wrds/06_ibes_ltg.ipynb
+++ b/nbs/01_wrds/06_ibes_ltg.ipynb
@@ -137,206 +137,8 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>type</th>\n",
-       "      <th>wrds_library</th>\n",
-       "      <th>wrds_table</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>ticker</td>\n",
-       "      <td>VARCHAR(6)</td>\n",
-       "      <td>ibes</td>\n",
-       "      <td>detu_epsus</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>cusip</td>\n",
-       "      <td>VARCHAR(8)</td>\n",
-       "      <td>ibes</td>\n",
-       "      <td>detu_epsus</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>oftic</td>\n",
-       "      <td>VARCHAR(6)</td>\n",
-       "      <td>ibes</td>\n",
-       "      <td>detu_epsus</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>cname</td>\n",
-       "      <td>VARCHAR(16)</td>\n",
-       "      <td>ibes</td>\n",
-       "      <td>detu_epsus</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>actdats</td>\n",
-       "      <td>DATE</td>\n",
-       "      <td>ibes</td>\n",
-       "      <td>detu_epsus</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>estimator</td>\n",
-       "      <td>DOUBLE_PRECISION</td>\n",
-       "      <td>ibes</td>\n",
-       "      <td>detu_epsus</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>analys</td>\n",
-       "      <td>DOUBLE_PRECISION</td>\n",
-       "      <td>ibes</td>\n",
-       "      <td>detu_epsus</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>currfl</td>\n",
-       "      <td>VARCHAR(1)</td>\n",
-       "      <td>ibes</td>\n",
-       "      <td>detu_epsus</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>pdf</td>\n",
-       "      <td>VARCHAR(1)</td>\n",
-       "      <td>ibes</td>\n",
-       "      <td>detu_epsus</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>fpi</td>\n",
-       "      <td>VARCHAR(1)</td>\n",
-       "      <td>ibes</td>\n",
-       "      <td>detu_epsus</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>measure</td>\n",
-       "      <td>VARCHAR(3)</td>\n",
-       "      <td>ibes</td>\n",
-       "      <td>detu_epsus</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>value</td>\n",
-       "      <td>DOUBLE_PRECISION</td>\n",
-       "      <td>ibes</td>\n",
-       "      <td>detu_epsus</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>curr</td>\n",
-       "      <td>VARCHAR(3)</td>\n",
-       "      <td>ibes</td>\n",
-       "      <td>detu_epsus</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>usfirm</td>\n",
-       "      <td>SMALLINT</td>\n",
-       "      <td>ibes</td>\n",
-       "      <td>detu_epsus</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>fpedats</td>\n",
-       "      <td>DATE</td>\n",
-       "      <td>ibes</td>\n",
-       "      <td>detu_epsus</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>acttims</td>\n",
-       "      <td>TIME</td>\n",
-       "      <td>ibes</td>\n",
-       "      <td>detu_epsus</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>revdats</td>\n",
-       "      <td>DATE</td>\n",
-       "      <td>ibes</td>\n",
-       "      <td>detu_epsus</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>revtims</td>\n",
-       "      <td>TIME</td>\n",
-       "      <td>ibes</td>\n",
-       "      <td>detu_epsus</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>anndats</td>\n",
-       "      <td>DATE</td>\n",
-       "      <td>ibes</td>\n",
-       "      <td>detu_epsus</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>anntims</td>\n",
-       "      <td>TIME</td>\n",
-       "      <td>ibes</td>\n",
-       "      <td>detu_epsus</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>report_curr</td>\n",
-       "      <td>VARCHAR(3)</td>\n",
-       "      <td>ibes</td>\n",
-       "      <td>detu_epsus</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "           name              type wrds_library  wrds_table\n",
-       "0        ticker        VARCHAR(6)         ibes  detu_epsus\n",
-       "1         cusip        VARCHAR(8)         ibes  detu_epsus\n",
-       "2         oftic        VARCHAR(6)         ibes  detu_epsus\n",
-       "3         cname       VARCHAR(16)         ibes  detu_epsus\n",
-       "4       actdats              DATE         ibes  detu_epsus\n",
-       "5     estimator  DOUBLE_PRECISION         ibes  detu_epsus\n",
-       "6        analys  DOUBLE_PRECISION         ibes  detu_epsus\n",
-       "7        currfl        VARCHAR(1)         ibes  detu_epsus\n",
-       "8           pdf        VARCHAR(1)         ibes  detu_epsus\n",
-       "9           fpi        VARCHAR(1)         ibes  detu_epsus\n",
-       "10      measure        VARCHAR(3)         ibes  detu_epsus\n",
-       "11        value  DOUBLE_PRECISION         ibes  detu_epsus\n",
-       "12         curr        VARCHAR(3)         ibes  detu_epsus\n",
-       "13       usfirm          SMALLINT         ibes  detu_epsus\n",
-       "14      fpedats              DATE         ibes  detu_epsus\n",
-       "15      acttims              TIME         ibes  detu_epsus\n",
-       "16      revdats              DATE         ibes  detu_epsus\n",
-       "17      revtims              TIME         ibes  detu_epsus\n",
-       "18      anndats              DATE         ibes  detu_epsus\n",
-       "19      anntims              TIME         ibes  detu_epsus\n",
-       "20  report_curr        VARCHAR(3)         ibes  detu_epsus"
+       "21"
       ]
      },
      "execution_count": null,
@@ -346,7 +148,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "all_vars #.name.count()"
+    "all_vars.name.count()"
    ]
   },
   {
@@ -368,7 +170,7 @@
    "source": [
     "#| export\n",
     "def parse_varlist(vars: List[str]|str=None, #list of variables requested by user\n",
-    "                  req_vars: List[str] = ['ticker', 'anndats'], #list of variables that will get downloaded, even if not in `vars`\n",
+    "                  required_vars: List[str] = [], #list of variables that will get downloaded, even if not in `vars`\n",
     "                  prefix: str='a.', #string to add in front of each variable name when we build the SQL string of variable names\n",
     "                  ) -> str:\n",
     "    \"\"\"Adds required variables to requested variables, validates them, and builds the SQL string with their names\"\"\"\n",
@@ -377,8 +179,8 @@
     "\n",
     "    # Build full list of variables that will be downloaded\n",
     "    if vars is None: vars = default_raw_vars()\n",
-    "    if req_vars is None: req_vars = []\n",
-    "    vars =  req_vars + [x for x in vars if x not in req_vars] #in case `vars` already contains some of the required variables\n",
+    "    if required_vars is None: req_vars = []\n",
+    "    vars =  required_vars + [x for x in vars if x not in required_vars] #in case `vars` already contains some of the required variables\n",
     "\n",
     "    # Validate variables to be downloaded (make sure that they are in the target database)\n",
     "    valid_vars = list(list_all_vars().name)\n",
@@ -396,7 +198,7 @@
     {
      "data": {
       "text/plain": [
-       "'a.ticker,a.anndats,a.value,a.fpi'"
+       "'a.value,a.fpi'"
       ]
      },
      "execution_count": null,
@@ -417,6 +219,7 @@
    "source": [
     "#| export\n",
     "def get_raw_data(vars: List[str]=None, # If None, downloads `default_raw_vars`; `permno`, `ticker`, and `anndats` added by default\n",
+    "            required_vars: List[str] = ['ticker', 'anndats'], #list of variables that will get downloaded, even if not in `vars`\n",
     "             obs_limit: int=None, #Number of rows to download. If None, full dataset will be downloaded\n",
     "             start_date: str=None, # Start date in MM/DD/YYYY format\n",
     "             end_date: str=None, #End date in MM/DD/YYYY format; if None, defaults to current date\n",
@@ -424,7 +227,7 @@
     "             ) -> pd.DataFrame:\n",
     "    \"\"\"Downloads `vars` from `start_date` to `end_date` from WRDS `ibes.detu_epsus` library and adds PERMNO from CRSP\"\"\"\n",
     "\n",
-    "    vars = parse_varlist(vars, prefix='a.')\n",
+    "    vars = parse_varlist(vars, prefix='a.', required_vars=required_vars)\n",
     "\n",
     "    sql_string=f\"\"\"SELECT {vars}, b.permno\n",
     "                        FROM {LIBRARY}.{TABLE} AS a\n",
