--- a/nbs/01_wrds/05_ratios.ipynb
+++ b/nbs/01_wrds/05_ratios.ipynb
@@ -122,11 +122,11 @@
     "\n",
     "    try:\n",
     "        db = wrds_api.Connection()\n",
-    "        funda = db.describe_table(LIBRARY,TABLE)\n",
+    "        funda = db.describe_table(LIBRARY,TABLE).assign(wrds_library=LIBRARY, wrds_table=TABLE)\n",
     "    finally:\n",
     "        db.close()\n",
     "\n",
-    "    return funda[['name']]"
+    "    return funda[['name','type','wrds_library','wrds_table']]"
    ]
   },
   {
@@ -147,8 +147,7 @@
     {
      "data": {
       "text/plain": [
-       "name    100\n",
-       "dtype: int64"
+       "100"
       ]
      },
      "execution_count": null,
@@ -158,7 +157,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "all_vars.count()"
+    "all_vars.name.count()"
    ]
   },
   {
